# stark-tools

./: Cargo.toml  main
src/: commitable.rs  fields.rs  hashable.rs  lib.rs  main.rs  merkletree.rs  point.rs  polynomial.rs  spongefish_schnorr.rs  test.rs
src/proximityproofs/: fri.rs  mod.rs  narg_proximityproof.rs  utils.rs
