[package]
name = "stark-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = { git = "https://github.com/arkworks-rs/algebra/", rev = "48ec86e"}
spongefish = { git = "https://github.com/arkworks-rs/spongefish/", rev = "3ded547", features = ["arkworks-algebra"]}
ark-ff-canonical = { version = "^0.5.0", package = "ark-ff"}
ark-std = { git = "https://github.com/arkworks-rs/std", rev = "73dcad0"}
ark-starkcurve = { git = "https://github.com/arkworks-rs/algebra/", rev = "48ec86e"}
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives/", rev = "39fb17b", default-features = true, features = [ "crh", "merkle_tree" ] }
ark-ed-on-bls12-381 = { version = "^0.5.0", features = ["r1cs"] }
bimap = "0.6.3"
rand = "0.9.2"
ark-ec = "0.5.0"
hex = "0.4.3"
blake2 = "0.10.6"
ark-curve25519 = "0.5.0"
sha3 = "0.10.8"

