[package]
name = "stark-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-std = "0.5"
ark-ff = { version = "0.5", features = ["asm"], package = "ark-ff"}
ark-crypto-primitives = { version = "0.5", default-features = true, features = [ "crh", "merkle_tree" ]  }
ark-ed-on-bls12-381 = { version = "0.5.0", features = ["r1cs"] }
ark-curve25519 = "0.5.0"
ark-ec = "0.5.0"
spongefish = { git = "https://github.com/arkworks-rs/spongefish/", rev = "3ded547", features = ["arkworks-algebra"]}

rand = "0.8"
bimap = "0.6.3"
hex = "0.4.3"
blake2 = "0.10.6"
sha3 = "0.10.8"

